[package]
name = "learn-rs"
version = "0.1.0"
authors = ["Florian Müller <florian@tomueller.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.13"}
approx = "0.3.2"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
